added features section of social-events web

--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,14 @@
 
 @import "tailwindcss";
 @plugin "daisyui" {
-  themes: light --default;
+  themes: light --default, dark --prefersdark;
 }
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
 @plugin "daisyui/theme" {
   name: "light";
   default: true;
-  --color-primary: #403f3f;
+  --color-primary: #02705e;
   --color-secondary: #d72050;
   --color-base-200: #f3f3f3;
   --color-base-300: #e7e7e7;
@@ -17,4 +18,18 @@
 
 * {
   font-family: "Poppins", sans-serif;
+
+}
+body{
+  /* background-color: #f5f9fa; */
+}
+
+ul a.active{
+  @apply text-[#02705e] 
+}
+ul a {
+  @apply font-semibold
+}
+li a.active{
+  @apply text-[#02705e] 
 }
